@@ -40,6 +40,7 @@
 -- Prevent a cosmetic use-after-free in audio playback during program abortion just after
    starting playback (prebuffer still in use, implication a blip of bad sound and
    a complaining sanitizer).
+-- Reformat audio capabilities table, more condensed, fits into 80 columns.
 - out123:
 -- Document --STDOUT, make it more robust regarding fwrite() interruptions.
 -- Removed the implicit phase shift that made generated waves exactly at
